# ucloud2dida

./: .gitignore  README.md  bupt_api.py  bupt_auth.py  get_course_id.py  get_projects.py  ketangpai.py  main.py  pyproject.toml
.github/workflows/: ci.yml  sync.yml
src/ucloud2dida/api/: bupt.py  ketangpai.py
src/ucloud2dida/auth/: __init__.py  bupt_auth.py
src/ucloud2dida/core/: sync.py
src/ucloud2dida/utils/: config.py  exceptions.py  logger.py
